@@ -46,6 +46,9 @@ Library
 IDLE
 ----
 
+- Issue #15392: Create a unittest framework for IDLE.
+  Rajagopalasarma Jayakrishnan
+  
 - Issue #14146: Highlight source line while debugging on Windows.
 
 - Issue #17532: Always include Options menu for IDLE on OS X.
